deps/v8/test/message/modules-import6.out
*%(basename)s:9: SyntaxError: The requested module does not provide an export named 'c'
import {c} from "modules-import6.js";
        ^
SyntaxError: The requested module does not provide an export named 'c'

